@startuml
skinparam classAttributeIconColor #5782C3

class Tariff {
  +Integer id
  +String name
  +Double base_price
  +String client_category
  +String client_type
}

class Membership {
  +Long id
  +Date start_date
  +Date end_date
  +Double final_price
  +UUID client_id
  +Integer hours_remaining
  +Boolean is_active
  +Integer tariff_id
}

class Client {
    +UUID id
    +String first_name
    +String last_name
    +Date birth_date
    +Date registration_date
}

Client "1" --> "1" Membership
Tariff "1" --> "*" Membership

@enduml
